# solana-axelar-scripts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/contract-builder/: Cargo.toml
crates/contract-builder/src/: lib.rs
crates/message-limits-report/: Cargo.toml
crates/message-limits-report/src/: main.rs
crates/script/: Cargo.toml  ampd-config.toml  solana-devnet.json
crates/script/src/: cli.rs  main.rs
crates/script/src/cli/: cmd.rs
crates/script/src/cli/cmd/: axelar_deployments.rs  cosmwasm.rs  deployments.rs  evm.rs  solana.rs  testnet.rs
crates/script/src/cli/cmd/testnet/: solana_interactions.rs
script/: Cargo.toml
script/src/cli/: cmd.rs
script/src/cli/cmd/: cosmwasm.rs
script/src/cli/cmd/cosmwasm/: build.rs
xtask/: Cargo.toml
xtask/src/: main.rs
