[workspace.package]
version = "0.1.0"
authors = []
repository = "https://github.com/eigerco/solana-axelar-scripts"
homepage = "https://github.com/eigerco/solana-axelar-scripts"
license = "MIT/Apache-2.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["xtask", "crates/*"]

[workspace.lints.clippy]
cargo = { priority = -1, level = "deny" }
complexity = { priority = -2, level = "deny" }
perf = { priority = -3, level = "deny" }
correctness = { priority = -4, level = "deny" }
restriction = { priority = -5, level = "deny" }
style = { priority = -6, level = "deny" }
suspicious = { priority = -7, level = "deny" }
pedantic = { priority = -8, level = "deny" }
nursery = { priority = -9, level = "deny" }

cargo_common_metadata = "allow"
missing_docs_in_private_items = "allow"
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
dbg_macro = "allow"
single_call_fn = "allow"
missing_inline_in_public_items = "allow"
question_mark_used = "allow"
absolute_paths = "allow"
missing_trait_methods = "allow"
wildcard_imports = "allow"
shadow_reuse = "allow"
exhaustive_enums = "allow"
ref_patterns = "allow"
pub_use = "allow"
single_char_lifetime_names = "allow"
multiple_crate_versions = "allow"
exhaustive_structs = "allow"
future_not_send = "allow"
separated_literal_suffix = "allow"
mod_module_files = "allow"
negative_feature_names = "allow"
std_instead_of_alloc = "allow"
expect_used = "allow"
pub_with_shorthand = "allow"
redundant_pub_crate = "allow"
option_if_let_else = "allow"
self_named_module_files = "allow"
shadow_unrelated = "allow"

[workspace.lints.rust]
missing_docs = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "deny", priority = 0 }
unreachable_pub = { level = "warn", priority = -1 }
unused_imports = { level = "warn", priority = -1 }
unused_must_use = { level = "deny", priority = -1 }

[workspace.dependencies]
contract-builder = { path = "crates/contract-builder" }

axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "651e7237" }
gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "651e7237" }
axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "651e7237" }
axelar-solana-memo-program = { git = "https://github.com/eigerco/solana-axelar.git", rev = "651e7237" }
axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "651e7237" }
axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "651e7237" }
axelar-solana-gateway-test-fixtures = { git = "https://github.com/eigerco/solana-axelar.git", rev = "651e7237" }
axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "651e7237" }
evm-contracts-test-suite = { git = "https://github.com/eigerco/solana-axelar.git", rev = "651e7237" }

solana-cli-config = "2.0.1"
solana-client = "=2.0.16"
solana-logger = "=2.0.16"
solana-program = "=2.0.16"
solana-program-test = "=2.0.16"
solana-sdk = "=2.0.16"
solana-test-validator = "=2.0.16"
solana-rpc-client-api = "=2.0.16"
solana-rpc = "=2.0.16"
solana-transaction-status = "=2.0.16"
spl-associated-token-account = "5.0.1"
spl-pod = "0.4.0"
spl-token = "6.0.0"
spl-token-2022 = "5.0.2"
spl-token-metadata-interface = "0.5.1"

rand = "0.8"
eyre = "0.6"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
xshell = "0.2"
futures = "0.3"
derive_builder = "0.20"
tokio = { version = "1", features = ["full"] }
serde = "1"
itertools = "0.12"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }

tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
# codegen-backend = "cranelift" (not supported on m1 mac)

[patch.crates-io]
# curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching it here to unpin zeroize, using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
