[package]
name = "script"
version = "0.1.0"
edition = "2021"

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = "deny"
unreachable_pub = "warn"
unused_imports = "warn"
unused_must_use = "deny"

[dependencies]
# Our crates
axelar-executable-old = { git = "https://github.com/eigerco/solana-axelar.git", rev = "0be172e" }
axelar-rkyv-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "0be172e" }
axelar-solana-memo-program = { git = "https://github.com/eigerco/solana-axelar.git", rev = "0be172e" }
evm-contracts-test-suite = { git = "https://github.com/eigerco/solana-axelar.git", rev = "0be172e" }
axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "0be172e" }
gmp-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "0be172e" }
test-fixtures = { git = "https://github.com/eigerco/solana-axelar.git", rev = "0be172e" }

# Amplifier crates
# https://github.com/eigerco/axelar-amplifier.git
gateway = { git = "https://github.com/eigerco/axelar-amplifier.git", rev = "40790eb", features = ["library"] }
gateway-api = { git = "https://github.com/eigerco/axelar-amplifier.git", rev = "40790eb" }
multisig = { git = "https://github.com/eigerco/axelar-amplifier.git", rev = "40790eb", features = ["library"] }
router-api = { git = "https://github.com/eigerco/axelar-amplifier.git", rev = "40790eb" }
axelar-wasm-std = { git = "https://github.com/eigerco/axelar-amplifier.git", rev = "40790eb" }
voting-verifier = { git = "https://github.com/eigerco/axelar-amplifier.git", rev = "40790eb", features = ["library"] }

# Util crates
base64 = "0.21"
bincode = "1.3"
walkdir = "2"
cargo_metadata = "0.19"
bip39 = { version = "2", features = ["rand"] }
borsh = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
const_format = { version = "0.2", features = ["fmt"] }
cosmrs = { version = "0.16", features = ["cosmwasm", "rpc", "grpc"] }
cosmwasm-schema = "2"
cosmwasm-std = "1.5"
csv-async = { version = "1.3.0", features = ["tokio"] }
derive_builder = "0.20"
ethers = "2"
ethers-core = "2"
eyre = "0.6"
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
inquire = "0.7.5"
itertools = "0.12"
k256 = "0.13"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
serde = "1"
serde_json = "1"
simd-json = "0.13"
solana-cli-config = "2.0.1"
solana-client = "=2.0.16"
solana-logger = "=2.0.16"
solana-program = "=2.0.16"
solana-program-test = "=2.0.16"
solana-sdk = "=2.0.16"
solana-test-validator = "=2.0.16"
solana-rpc-client-api = "=2.0.16"
solana-rpc = "=2.0.16"
solana-transaction-status = "=2.0.16"
spl-associated-token-account = "5.0.1"
spl-pod = "0.4.0"
spl-token = "6.0.0"
spl-token-2022 = "5.0.2"
spl-token-metadata-interface = "0.5.1"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
xshell = "0.2"

[dev-dependencies]
solana-streamer = "2.0.1"
tempfile = "3"
