[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = "deny"
unreachable_pub = "warn"
unused_imports = "warn"
unused_must_use = "deny"

[dependencies]
# Our crates
axelar-executable-old = { git = "https://github.com/eigerco/axelar-solan-internal.git", branch = "validate-message-refactor" }
axelar-rkyv-encoding = { git = "https://github.com/eigerco/axelar-solan-internal.git", branch = "validate-message-refactor" }
axelar-solana-memo-program = { git = "https://github.com/eigerco/axelar-solan-internal.git", branch = "validate-message-refactor" }
evm-contracts-test-suite = { git = "https://github.com/eigerco/axelar-solan-internal.git", branch = "validate-message-refactor" }
axelra-message-primitives = { git = "https://github.com/eigerco/axelar-solan-internal.git", branch = "validate-message-refactor" }
gmp-gateway = { git = "https://github.com/eigerco/axelar-solan-internal.git", branch = "validate-message-refactor" }
test-fixtures = { git = "https://github.com/eigerco/axelar-solan-internal.git", branch = "validate-message-refactor" }

# Amplifier crates
gateway = { path = "../../axelar-amplifier/contracts/gateway", features = ["library"] }
gateway-api = { path = "../../axelar-amplifier/packages/gateway-api" }
multisig = { path = "../../axelar-amplifier/contracts/multisig", features = ["library"] }
router-api = { path = "../../axelar-amplifier/packages/router-api" }
voting-verifier = { path = "../../axelar-amplifier/contracts/voting-verifier", features = ["library"] }

# Util crates
base64 = "0.21"
bincode = "1.3"
bip39 = { version = "2", features = ["rand"] }
borsh = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
const_format = { version = "0.2", features = ["fmt"] }
cosmrs = { version = "0.16", features = ["cosmwasm", "rpc", "grpc"] }
cosmwasm-schema = "2"
cosmwasm-std = "1.5"
csv-async = { version = "1.3.0", features = ["tokio"] }
derive_builder = "0.20"
ethers = "2"
ethers-core = "2"
eyre = "0.6"
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
inquire = "0.7.5"
itertools = "0.12"
k256 = "0.13"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
serde = "1"
serde_json = "1"
simd-json = "0.13"
solana-cli-config = "2.0.1"
solana-client = "2.0.1"
solana-rpc = "2.0.1"
solana-rpc-client-api = "2.0.1"
solana-sdk = "2.0.1"
solana-test-validator = "2.0.1"
solana-transaction-status = "2.0.1"
spl-associated-token-account = "5.0.1"
spl-pod = "0.4.0"
spl-token = "6.0.0"
spl-token-2022 = "5.0.2"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
xshell = "0.2"

[dev-dependencies]
solana-streamer = "2.0.1"
tempfile = "3"
