[package]
name = "message-limits-report"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
contract-builder.workspace = true

solana-cli-config.workspace = true
solana-client.workspace = true
solana-logger.workspace = true
solana-program.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
solana-test-validator.workspace = true
solana-rpc-client-api.workspace = true
solana-rpc.workspace = true
solana-transaction-status.workspace = true
spl-associated-token-account.workspace = true
spl-pod.workspace = true
spl-token.workspace = true
spl-token-2022.workspace = true
spl-token-metadata-interface.workspace = true

axelar-executable.workspace = true
axelar-solana-encoding.workspace = true
axelar-solana-memo-program.workspace = true
axelar-solana-gateway.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
evm-contracts-test-suite.workspace = true

eyre.workspace = true
itertools.workspace = true
thiserror.workspace = true
rand.workspace = true
color-eyre.workspace = true
futures.workspace = true
clap.workspace = true
derive_builder.workspace = true
xshell.workspace = true
tokio.workspace = true
serde.workspace = true

tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

csv-async = { version = "1", features = ["tokio"] }
bincode = "1.3"

[lints]
workspace = true
